--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,7 @@ function appendUtm(urlStr) {
   <div class="insights-head">
     <div>
       <div class="h" id="insightHeadline">오늘의 인기</div>
-      <div class="sub">방문자 수 대신, <b>이 사이트에서 실제로 많이 본/많이 검색한 항목</b>을 보여줍니다. (GA4 연동 시 전체 집계 / 미연동 시 로컬 집계)</div>
+      <div class="sub">방문자 수 대신, <b>이 사이트에서 실제로 많이 본/많이 검색한 항목</b>을 보여줍니다. </div>
     </div>
   </div>
 
