--- a/index.html
+++ b/index.html
@@ -750,7 +750,13 @@ const CARD_DATA = {
 
   card9:{ title:"RIO", code:"opop", link:"https://rio2.casino/?b=OPOP", telegram:"Aven47",
     benefit:"카지노 입플/페이백 중심 · 고액 유저 기준 혜택 안내",
-    notice:"가입코드 미입력 시 혜택 적용이 어려울 수 있습니다." }
+    notice:"가입코드 미입력 시 혜택 적용이 어려울 수 있습니다." },
+  card10:{ title:"RED HULK", code:"HERO", link:"https://rhk-777.com", telegram:"SDTR8",
+    benefit:"신규 30% / 매충 10% / 페이백5% 콤프(1%/3%)%",
+    notice:"가입코드 미입력 시 혜택 적용 불가" },
+   card10:{ title:"TOP GUN", code:"GAS7", link:"https://topgun-88.com", telegram:"SDTR8",
+    benefit:"신규 30% / 매충 10% / 페이백5% 콤프(1%/3%)%",
+    notice:"가입코드 미입력 시 혜택 적용 불가" }
 };
 
 /* ===== 인사이트 (종목별) ===== */
@@ -1459,6 +1465,8 @@ function calcSimpleMargin() {
   set("card7", {tag:"ad", priority:"ad", recruit:true, reasons:["광고 문의 전용", "배너/카드/문구 협의 가능", "텔레그램으로만 진행"]});
   set("card8", {tag:"ad", priority:"ad", recruit:true, reasons:["광고 문의 전용", "고정 노출/추가 옵션", "사칭 주의"]});
   set("card9", {tag:"new", priority:"normal", reasons:["입플/페이백 중심 안내", "고액 유저 기준 혜택", "문의 채널 고정"]});
+  set("card10", {tag:"new", priority:"normal", reasons:["입플/페이백 중심 안내", "고액 유저 기준 혜택", "문의 채널 고정"]});
+  set("card11", {tag:"new", priority:"normal", reasons:["입플/페이백 중심 안내", "고액 유저 기준 혜택", "문의 채널 고정"]});
 })();
 
 /* ===== 카드 렌더/필터/인기순 ===== */
