--- a/index.html
+++ b/index.html
@@ -754,9 +754,9 @@ const CARD_DATA = {
   card10:{ title:"RED HULK", code:"HERO", link:"https://rhk-777.com", telegram:"SDTR8",
     benefit:"신규 30% / 매충 10% / 페이백5% 콤프(1%/3%)%",
     notice:"가입코드 미입력 시 혜택 적용 불가" },
-   card10:{ title:"TOP GUN", code:"GAS7", link:"https://topgun-88.com", telegram:"SDTR8",
+   card11:{ title:"TOP GUN", code:"GAS7", link:"https://topgun-88.com", telegram:"SDTR8",
     benefit:"신규 30% / 매충 10% / 페이백5% 콤프(1%/3%)%",
-    notice:"가입코드 미입력 시 혜택 적용 불가" }
+    notice:"가입코드 미입력 시 혜택 적용 불가" },
 };
 
 /* ===== 인사이트 (종목별) ===== */
