--- a/index.html
+++ b/index.html
@@ -802,11 +802,41 @@ const INSIGHTS_BY_SPORT = {
 /* ===== 유틸: GA 이벤트/UTM 저장/UTM 붙이기 ===== */
 const UTM_KEYS = ["utm_source","utm_medium","utm_campaign","utm_term","utm_content"];
 function track(evt, params) {
+  // GA4 event helper
   try {
-    if (typeof window.gtag === "function") {
-      window.gtag("event", evt, params || {});
+    if (typeof window.gtag !== "function") return;
+
+    const p = Object.assign({}, (params || {}));
+
+    // DebugView toggle: add ?debug=1 or set localStorage "ga_debug" = "1"
+    const sp = new URLSearchParams(location.search);
+    const dbg = (sp.get("debug") === "1") || (localStorage.getItem("ga_debug") === "1");
+    if (dbg && p.debug_mode === undefined) p.debug_mode = true;
+
+    // Helpful common context (lightweight)
+    if (p.page_path === undefined) p.page_path = location.pathname;
+    if (p.page_title === undefined && document && document.title) p.page_title = document.title.slice(0, 80);
+
+    // Backward/forward compatible parameter normalization (keep original keys too)
+    if (evt === "cta_click") {
+      if (p.cta && p.cta_id === undefined) p.cta_id = p.cta;
     }
-  } catch(e) {}
+    if (evt === "outbound_click") {
+      if (p.type && p.outbound_type === undefined) p.outbound_type = p.type;
+      if (p.destination_domain === undefined && typeof p.url === "string") {
+        try { p.destination_domain = (new URL(p.url, location.href)).hostname; } catch(e) {}
+      }
+    }
+    if (evt === "card_open") {
+      if (p.title && p.card_title === undefined) p.card_title = p.title;
+      if (p.tag && p.card_tag === undefined) p.card_tag = p.tag;
+    }
+    if (evt === "search") {
+      if (p.search_term && p.query === undefined) p.query = p.search_term;
+    }
+
+    window.gtag("event", evt, p);
+  } catch (e) {}
 }
 function saveUtmFromUrl() {
   const sp = new URLSearchParams(location.search);
@@ -858,7 +888,7 @@ function appendUtm(urlStr) {
   // POPULAR_API: 전체 사용자 인기 데이터를 반환하는 API 엔드포인트(예: /api/popular)
   //   - 연동 전에는 비워두면(또는 "disabled") 로컬 집계(내 브라우저 기준)로만 표시됩니다.
   window.SITE_CONFIG = window.SITE_CONFIG || {
-    GA4_ID: "G-XXXXXXXXXX",
+    GA4_ID: "G-KWT87FBY6S",
     POPULAR_API: "disabled"
   };
 
@@ -867,6 +897,10 @@ function appendUtm(urlStr) {
     try{
       const id = (window.SITE_CONFIG && window.SITE_CONFIG.GA4_ID) || "";
       if(!id || id === "disabled" || /^G-XXXX/i.test(id) || id === "G-XXXXXXXXXX") return;
+
+      // 이미 gtag 로드되어 있으면 중복 로드 방지
+      if(document.querySelector('script[src*="gtag/js?id=' + encodeURIComponent(id) + '"]')) return;
+      
 
       const s = document.createElement("script");
       s.async = true;
@@ -1143,10 +1177,7 @@ function appendUtm(urlStr) {
         <div class="stat-meta" id="insightKwMeta">검색창에 입력한 키워드 기준으로 집계됩니다. (데이터가 쌓이면 자동 갱신)</div>
       </div>
       <div class="stat-list" id="insightKeywords"></div>
-      <div class="stat-actions">
-        <button class="small-btn" type="button" id="insightResetBtn">로컬 기록 초기화</button>
-      </div>
-    </div>
+</div>
 
     <div class="card stat-card" aria-label="오늘 많이 본 카드">
       <div class="stat-top">
@@ -1535,7 +1566,7 @@ function bumpView(cardId){
 function bumpSearch(rawQuery){
   const s = loadStats();
   // GA4: recommended event name "search" with parameter "search_term"
-  track("search", {"search_term": String(rawQuery||"").trim().slice(0,80)});
+  track("search", {"search_term": String(rawQuery||"").trim().slice(0,80), "results_count": document.querySelectorAll(".card[data-card]").length, "q_len": String(rawQuery||"").trim().length});
   const tokens = tokenize(rawQuery);
   if(!tokens.length) return;
   tokens.forEach(tok=>{
@@ -1891,14 +1922,14 @@ function setFilter(key) {
     const top = document.getElementById("vendorTop");
     if(top) top.scrollIntoView({behavior:"smooth", block:"start"});
   }
-  track("filter_change", {"filter": currentFilter});
+  track("filter_change", {"filter": currentFilter, "results_count": document.querySelectorAll(".card[data-card]").length});
 }
 
 function setSort(key) {
   currentSort = key || "default";
   setChipActive();
   renderGrid();
-  track("sort_change", {"sort": currentSort});
+  track("sort_change", {"sort": currentSort, "results_count": document.querySelectorAll(".card[data-card]").length});
 }
 
 
@@ -1991,7 +2022,7 @@ function openCard(id) {
   currentCardId = id;
   bumpView(id);
   incCardClick(id);
-  track("card_open", {"card_id": id, "title": d.title || "", "tag": d.tag || ""});
+  track("card_open", {"card_id": id, "title": d.title || "", "tag": d.tag || "", "code": (d.code||"").slice(0,16)});
 
   const isRecruit = !!d.recruit;
 
@@ -2062,7 +2093,7 @@ function copyCode() {
   if(!currentCode) return;
   navigator.clipboard.writeText(currentCode).then(()=>{
     alert("가입코드가 복사되었습니다");
-    track("copy_code", {"code": currentCode});
+    track("copy_code", {"code": currentCode, "card_id": currentCardId, "title": (CARD_DATA[currentCardId]?.title)||"", "tag": (CARD_DATA[currentCardId]?.tag)||""});
   }).catch(()=>{
     // fallback
     try {
@@ -2073,7 +2104,7 @@ function copyCode() {
       document.execCommand("copy");
       t.remove();
       alert("가입코드가 복사되었습니다");
-      track("copy_code", {"code": currentCode});
+      track("copy_code", {"code": currentCode, "card_id": currentCardId, "title": (CARD_DATA[currentCardId]?.title)||"", "tag": (CARD_DATA[currentCardId]?.tag)||""});
     } catch(e) {}
   });
 }
@@ -2303,8 +2334,8 @@ function jumpToRec() {
   if(shareBtn) shareBtn.addEventListener("click", ()=> openShare(currentCardId));
   if(moreBtn) moreBtn.addEventListener("click", jumpToRec);
 
-  if(goBtn) goBtn.addEventListener("click", ()=> track("outbound_click", {"type":"site"}));
-  if(tgBtn) tgBtn.addEventListener("click", ()=> track("outbound_click", {"type":"telegram"}));
+  if(goBtn) goBtn.addEventListener("click", ()=> track("outbound_click", {"type":"site", "card_id": currentCardId, "title": (CARD_DATA[currentCardId]?.title)||"", "url": (document.getElementById("pLink")?.href)||"" }));
+  if(tgBtn) tgBtn.addEventListener("click", ()=> track("outbound_click", {"type":"telegram", "card_id": currentCardId, "title": (CARD_DATA[currentCardId]?.title)||"", "url": (document.getElementById("pTelegram")?.href)||"" }));
 
   if(closeShareBtn) closeShareBtn.addEventListener("click", closeShare);
   if(copyShareLinkBtn) copyShareLinkBtn.addEventListener("click", copyShareLink);
@@ -2370,7 +2401,15 @@ function maybeAutoRecFilter() {
 (function bindCtas() {
   document.querySelectorAll("[data-cta]").forEach(el=>{
     el.addEventListener("click", ()=>{
-      track("cta_click", {"cta": el.getAttribute("data-cta") || ""});
+      const cta = el.getAttribute("data-cta") || "";
+      const txt = (el.textContent || "").replace(/\s+/g," ").trim().slice(0,60);
+      let loc = "unknown";
+      if(el.closest(".fab")) loc = "fab";
+      else if(el.closest("#analyzerSection")) loc = "hero";
+      else if(el.closest(".vendor-header")) loc = "vendor_header";
+      else if(el.closest(".vendor-tools")) loc = "vendor_tools";
+      else if(el.closest(".landing-seo")) loc = "footer_links";
+      track("cta_click", {"cta": cta, "cta_location": loc, "cta_text": txt});
     });
   });
 })();
