--- a/analysis/index.html
+++ b/analysis/index.html
@@ -586,6 +586,64 @@ hr.sep{ border:none; height:1px; background:rgba(255,255,255,.06); margin:12px 0
   .mobile-dock{ display:none; }
 }
 
+
+
+/* ===== Empty History Demo ===== */
+.demo-empty{
+  border:1px dashed rgba(255,255,255,.18);
+  background:rgba(255,255,255,.03);
+  padding:14px;
+  border-radius:14px;
+}
+.demo-title{ font-weight:900; font-size:14px; margin-bottom:6px; }
+.demo-desc{ font-size:12px; color:#cfcfcf; line-height:1.5; }
+.demo-btns{ display:flex; gap:10px; flex-wrap:wrap; margin-top:10px; }
+.demo-btns .btn{ flex:1; min-width:170px; }
+.demo-note{ margin-top:10px; font-size:11px; color:#9aa0a6; line-height:1.45; }
+
+/* ===== First-Visit Onboarding ===== */
+.onb-highlight{
+  position:relative;
+  z-index:9998 !important;
+  border-radius:16px !important;
+  box-shadow: 0 0 0 9999px rgba(0,0,0,.68), 0 0 0 2px rgba(255,255,255,.18) !important;
+}
+#onbPopover{
+  position:fixed;
+  z-index:9999;
+  max-width:340px;
+  width:calc(100vw - 36px);
+  background:rgba(14,16,20,.96);
+  border:1px solid rgba(255,255,255,.14);
+  border-radius:16px;
+  box-shadow: 0 10px 30px rgba(0,0,0,.45);
+  padding:14px;
+  display:none;
+}
+#onbPopover .onb-hd{
+  display:flex; align-items:center; justify-content:space-between; gap:10px;
+}
+#onbPopover .onb-title{
+  font-weight:900; font-size:14px;
+}
+#onbPopover .onb-step{
+  font-size:11px; color:#9aa0a6;
+}
+#onbPopover .onb-body{
+  margin-top:8px;
+  font-size:12px; color:#cfcfcf; line-height:1.55;
+}
+#onbPopover .onb-actions{
+  display:flex; gap:8px; margin-top:12px; justify-content:flex-end; flex-wrap:wrap;
+}
+#onbPopover .onb-actions .btn{ min-width:0; }
+#onbPopover .onb-skip{
+  margin-right:auto;
+  font-size:12px;
+  background:transparent;
+  border:1px solid rgba(255,255,255,.16);
+  color:#cfcfcf;
+}
 </style>
 </head>
 
@@ -869,7 +927,7 @@ hr.sep{ border:none; height:1px; background:rgba(255,255,255,.06); margin:12px 0
     </div>
 
     <div class="actions">
-      <button class="btn primary" onclick="calc()">계산하기</button>
+      <button class="btn primary" id="btnCalc" onclick="calc()">계산하기</button>
       <button class="btn secondary" onclick="resetAll()">초기화</button>
       <button class="btn gold" onclick="copyResult()">결과 복사</button>
       <button class="btn secondary" onclick="shareResult()">공유</button>
@@ -900,7 +958,7 @@ hr.sep{ border:none; height:1px; background:rgba(255,255,255,.06); margin:12px 0
   </div>
 
   <!-- ✅ 최근 계산 히스토리 -->
-  <div class="card">
+  <div class="card" id="historyCard">
     <div class="title"><span class="badge">HISTORY</span>최근 계산 히스토리 (로컬 저장)</div>
     <div class="small-hint">
       • 히스토리 항목 클릭 → <b>입력 자동 복원 + 즉시 재계산</b><br>
@@ -2082,7 +2140,16 @@ function renderHistory(){
 
   const arr = readHistory();
   if(!arr.length){
-    list.innerHTML = `<div class="small-hint">아직 저장된 히스토리가 없습니다. 계산을 한 번 실행해보세요.</div>`;
+    list.innerHTML = `
+      <div class="demo-empty">
+        <div class="demo-title">히스토리가 비어있어요.</div>
+        <div class="demo-desc">아래 <b>예시 버튼</b>을 눌러 입력을 자동 채우고, 바로 계산까지 실행해볼 수 있어요.</div>
+        <div class="demo-btns">
+          <button class="btn primary2" type="button" onclick="loadDemo('soccer')">⚽ 축구 예시로 계산</button>
+          <button class="btn primary2" type="button" onclick="loadDemo('basketball')">🏀 농구 예시로 계산</button>
+        </div>
+        <div class="demo-note">※ 예시는 샘플 데이터이며, 실제 결과/승률을 보장하지 않습니다.</div>
+      </div>`;
     return;
   }
 
@@ -2376,6 +2443,223 @@ function closeAdPopup(disableToday){
 }
 
 
+
+/* ===== Demo Loader (for empty history) ===== */
+function loadDemo(kind){
+  try{
+    if(kind==="soccer"){
+      setVal("sport","soccer");
+      onSportChange(true);
+
+      setVal("level","simple");
+      onLevelChange(true);
+
+      setVal("league","프리미어리그 (예시)");
+      setVal("teams","홈팀 vs 원정팀");
+
+      // 3-way 메인 배당
+      setVal("main3OddsH","1.95");
+      setVal("main3OddsD","3.55");
+      setVal("main3OddsA","3.95");
+
+      // 오버/언더 예시
+      setVal("totalLine","2.5");
+      setVal("overOdds","1.90");
+      setVal("underOdds","1.95");
+
+      // 핸디 예시
+      setVal("handicapLine","-0.5");
+      setVal("handicapOddsA","1.88");
+      setVal("handicapOddsB","1.96");
+
+    }else if(kind==="basketball"){
+      setVal("sport","basketball");
+      onSportChange(true);
+
+      setVal("level","simple");
+      onLevelChange(true);
+
+      setVal("league","NBA (예시)");
+      setVal("teams","홈팀 vs 원정팀");
+
+      // 2-way 메인 배당
+      setVal("main2OddsA","1.78");
+      setVal("main2OddsB","2.05");
+
+      // 오버/언더 예시
+      setVal("totalLine","223.5");
+      setVal("overOdds","1.91");
+      setVal("underOdds","1.91");
+
+      // 핸디 예시
+      setVal("handicapLine","-3.5");
+      setVal("handicapOddsA","1.92");
+      setVal("handicapOddsB","1.90");
+    }
+
+    // 바로 계산 + 결과로 이동
+    calc();
+    quickJump("result");
+  }catch(e){
+    console.error(e);
+    toast("예시 로딩에 실패했어요");
+  }
+}
+
+/* ===== First-Visit Onboarding (3 tooltips) ===== */
+const ONB_KEY = "onboard88_analysis_v1_done";
+let onbIdx = 0;
+const onbSteps = [
+  {
+    target: "mainBox",
+    title: "배당부터 입력",
+    body: "메인 배당을 먼저 입력해요. (축구는 홈/무/원정, 다른 종목은 승/패) — 입력하면 아래 결과가 더 정확하게 정리돼요."
+  },
+  {
+    target: "btnCalc",
+    title: "계산하기",
+    body: "배당 입력 후 <b>계산하기</b>를 눌러 결과를 확인해요. 결과는 자동으로 히스토리에 저장됩니다."
+  },
+  {
+    target: "historyCard",
+    title: "히스토리로 재계산/비교",
+    body: "저장된 히스토리를 클릭하면 <b>입력 복원 + 즉시 재계산</b>돼요. 체크 2개 선택 → 비교(2개 나란히)도 가능해요."
+  }
+];
+
+function onbHighlightClear(){
+  document.querySelectorAll(".onb-highlight").forEach(el=>el.classList.remove("onb-highlight"));
+}
+
+function onbPositionPopover(targetEl){
+  const pop = document.getElementById("onbPopover");
+  if(!pop || !targetEl) return;
+
+  const r = targetEl.getBoundingClientRect();
+  const vw = Math.max(document.documentElement.clientWidth, window.innerWidth || 0);
+  const vh = Math.max(document.documentElement.clientHeight, window.innerHeight || 0);
+
+  const margin = 12;
+  const popW = Math.min(340, vw - 36);
+  pop.style.width = popW + "px";
+
+  // 기본: 타겟 아래 우측 정렬, 공간 부족하면 위로
+  let top = r.bottom + 12;
+  let left = Math.min(vw - popW - margin, Math.max(margin, r.left));
+
+  // 아래 공간 부족하면 위로
+  const popH = pop.offsetHeight || 180;
+  if(top + popH > vh - margin){
+    top = Math.max(margin, r.top - popH - 12);
+  }
+
+  pop.style.top = top + "px";
+  pop.style.left = left + "px";
+}
+
+function onbRender(){
+  const pop = document.getElementById("onbPopover");
+  const t = document.getElementById("onbTitle");
+  const s = document.getElementById("onbStep");
+  const b = document.getElementById("onbBody");
+  if(!pop || !t || !s || !b) return;
+
+  const step = onbSteps[onbIdx];
+  const el = document.getElementById(step.target);
+  if(!el){
+    // 타겟이 없으면 스킵
+    onbNext();
+    return;
+  }
+
+  onbHighlightClear();
+  el.classList.add("onb-highlight");
+
+  t.innerText = step.title;
+  s.innerText = `${onbIdx+1}/${onbSteps.length}`;
+  b.innerHTML = step.body;
+
+  pop.style.display = "block";
+  // 내용이 바뀐 뒤 높이를 계산하기 위해 다음 프레임에서 위치 계산
+  requestAnimationFrame(()=>onbPositionPopover(el));
+}
+
+function onbStart(){
+  try{
+    const qs = new URLSearchParams(location.search);
+    if(qs.get('onboard')==='1') localStorage.removeItem(ONB_KEY);
+  }catch(e){}
+  if(localStorage.getItem(ONB_KEY)==="1") return;
+  onbIdx = 0;
+  onbRender();
+  // 스크롤/리사이즈 시 팝업 위치 유지
+  window.addEventListener("scroll", onbOnScroll, {passive:true});
+  window.addEventListener("resize", onbOnScroll, {passive:true});
+  document.addEventListener("keydown", onbOnKey);
+}
+
+function onbFinish(){
+  localStorage.setItem(ONB_KEY,"1");
+  onbClose();
+}
+
+function onbClose(){
+  const pop = document.getElementById("onbPopover");
+  if(pop) pop.style.display = "none";
+  onbHighlightClear();
+  window.removeEventListener("scroll", onbOnScroll);
+  window.removeEventListener("resize", onbOnScroll);
+  document.removeEventListener("keydown", onbOnKey);
+}
+
+function onbOnScroll(){
+  const step = onbSteps[onbIdx];
+  const el = document.getElementById(step.target);
+  if(!el) return;
+  onbPositionPopover(el);
+}
+function onbOnKey(e){
+  if(e.key==="Escape") onbSkip();
+  if(e.key==="ArrowRight" || e.key==="Enter") onbNext();
+  if(e.key==="ArrowLeft") onbPrev();
+}
+
+function onbNext(){
+  if(onbIdx >= onbSteps.length - 1){
+    onbFinish();
+    return;
+  }
+  onbIdx++;
+  // 타겟이 화면 밖이면 해당 위치로 스크롤
+  const el = document.getElementById(onbSteps[onbIdx].target);
+  if(el){
+    try{ el.scrollIntoView({behavior:"smooth", block:"center"}); }catch(e){ el.scrollIntoView(); }
+    setTimeout(onbRender, 200);
+  }else{
+    onbRender();
+  }
+}
+
+function onbPrev(){
+  if(onbIdx <= 0){
+    onbIdx = 0;
+    onbRender();
+    return;
+  }
+  onbIdx--;
+  const el = document.getElementById(onbSteps[onbIdx].target);
+  if(el){
+    try{ el.scrollIntoView({behavior:"smooth", block:"center"}); }catch(e){ el.scrollIntoView(); }
+    setTimeout(onbRender, 200);
+  }else{
+    onbRender();
+  }
+}
+
+function onbSkip(){
+  onbFinish();
+}
+
 function boot(){
   loadState();
   if(!localStorage.getItem(LS_KEY)){
@@ -2388,6 +2672,8 @@ function boot(){
   renderTop3();
   renderMarginDash();
   restoreMiniGuide();
+  // 첫 방문자 1회 온보딩(3스텝)
+  setTimeout(()=>{ try{ onbStart(); }catch(e){} }, 450);
   setupShareCardBackdropClose();
   // 입력 중 빨간 하이라이트 자동 해제
   document.querySelectorAll("input,select").forEach(el=>{
@@ -2410,5 +2696,20 @@ function boot(){
 }
 boot();
 </script>
+
+<!-- First-Visit Onboarding Popover -->
+<div id="onbPopover" role="dialog" aria-modal="true" aria-label="처음 이용 가이드">
+  <div class="onb-hd">
+    <div class="onb-title" id="onbTitle">처음 이용 가이드</div>
+    <div class="onb-step" id="onbStep">1/3</div>
+  </div>
+  <div class="onb-body" id="onbBody"></div>
+  <div class="onb-actions">
+    <button class="btn onb-skip" type="button" onclick="onbSkip()">건너뛰기</button>
+    <button class="btn secondary" type="button" onclick="onbPrev()">이전</button>
+    <button class="btn primary" type="button" onclick="onbNext()">다음</button>
+  </div>
+</div>
+
 </body>
 </html>
